# huantong-learning-proj

./: .dockerignore  .gitignore  LICENSE  README.md  README_BUILD.md  README_INIT.md  api-doc.md  pyproject.toml  setup.cfg
deploy/: build-index.sh  build-tokenizer-cache.sh  drop-index.sh  flush-db.sh  run-api-and-job.sh  run-redis-and-els.sh  stop-containers.sh
deploy-dev/: flush-db.sh  run-api-and-job.sh  run-redis-and-els.sh  stop-containers.sh
dockerfile/: api  job
dockerfile/script/: prep_apt.sh
huantong_learning_proj/: api.py  data_receiver.py  db.py  job.py  settings.py
huantong_learning_proj/opt/: batch_test.py  extract_sql_fields.py  investigation.py  prep_client_db_dump.py  ranker.py  retriever.py  token_query.py  train_data.py
huantong_learning_proj/opt/client_db_scheme/: orgalias.sql  orgcodecollate.sql  ovalmaster.sql
scripts/: prep-data.sh  train.sh
